@@ -1,10 +1,77 @@
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'war'
+apply plugin: 'org.hidetake.ssh'
+
+
+remotes {
+  isg_web_aws {
+    host = '52.48.126.136'
+    user = 'ubuntu'
+    identity = file('/Users/joshsinger/.ssh/isg_web.pem')
+  }
+}
+
+buildscript {
+  repositories {
+    // for ssh-deploy stuff
+    jcenter()
+  }
+  dependencies {
+    classpath group: 'org.hidetake', name: 'gradle-ssh-plugin', version: '1.1.3'
+  }
+}
 
 repositories {
     mavenCentral()
 }
+
+// assumes Ubuntu 14.04
+// mafft download line might fail if they change the version available on the web.
+task initIsgWebAwsVm {
+  doLast {
+	  ssh.run {
+	    session(remotes.isg_web_aws) {
+
+	    	// stuff to manipulate package installer settings to allow non-interactive config
+		    execute 'sudo apt-get install -y python-software-properties debconf-utils'
+	    
+	    	// Oracle Java 8
+			// this repo contains Oracle Java installer 
+			execute 'sudo add-apt-repository -y ppa:webupd8team/java'
+			execute 'sudo apt-get update'
+			// accept oracle license
+			execute 'echo "oracle-java8-installer shared/accepted-oracle-license-v1-1 select true" | sudo debconf-set-selections'
+			// install java8 jdk
+			execute 'sudo apt-get install -y oracle-java8-installer'
+
+            // Apache Tomcat 7
+			execute 'sudo apt-get install -y tomcat7' 
+			// tell Tomcat where to find Java
+			execute "sudo sed -i 's/#JAVA_HOME.*/JAVA_HOME=\\/usr\\/lib\\/jvm\\/java-8-oracle\\/jre/g' /etc/default/tomcat7"
+
+			// Required for running Tomcat on port 80
+			execute "sudo apt-get install -y authbind"
+			execute "sudo sed -i 's/#AUTHBIND=no/AUTHBIND=yes/g' /etc/default/tomcat7"
+			// Increase Tomcat's Java heap to 1 Gb
+			execute "sudo sed -i 's/JAVA_OPTS.*/JAVA_OPTS=\"-Djava.awt.headless=true -Xmx1024m -XX:+UseConcMarkSweepGC\"/g' /etc/default/tomcat7"
+
+			execute "sudo touch /etc/authbind/byport/80"
+			execute "sudo chmod 500 /etc/authbind/byport/80"
+			execute "sudo chown tomcat7 /etc/authbind/byport/80"
+			
+
+			put from: 'isg_web_aws/server.xml', into: '/home/ubuntu/server.xml'
+			execute "sudo cp /home/ubuntu/server.xml /etc/tomcat7/server.xml"
+			
+			// start Tomcat
+			execute 'sudo service tomcat7 start'
+
+	    }
+	  }
+  }
+}
+
 
 
 
@@ -19,4 +86,29 @@ dependencies {
  	compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0.1'
 	providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
 }
+
+
+task deployWarIsgWebAWS(dependsOn: ['war']) {
+  ext.IsgWsWarFile = new File(buildDir, '/libs/ISGwebServer.war')
+  ext.IsgWsWarTouchfile = new File(buildDir, '/deployWarIsgWebAWS.touchfile')
+  inputs.file IsgWsWarFile
+  outputs.file IsgWsWarTouchfile
+  doLast {
+	  println "Uploading "+IsgWsWarFile.name
+	  ssh.run {
+	    session(remotes.isg_web_aws) {
+	      put from: IsgWsWarFile.absolutePath, into: '/tmp/ISGwebServer.war'
+	      execute 'sudo service tomcat7 stop'
+	      execute 'sudo rm -rf /var/lib/tomcat7/webapps/ISGwebServer'
+	      execute 'sudo rm -rf /var/lib/tomcat7/webapps/ISGwebServer.war'
+	      execute 'sudo mv /tmp/ISGwebServer.war /var/lib/tomcat7/webapps'
+	      execute 'sudo service tomcat7 start'
+	    }
+	  }
+	  IsgWsWarTouchfile.delete()
+	  buildDir.mkdirs()
+	  IsgWsWarTouchfile.createNewFile()
+  }
+}
+
 
